fix (footer): z-index

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -22,6 +22,7 @@
 
   @include c.headerFooterPadding(true);
   @include t.text-x-small;
+  @include u.zIndex('footer');
 
   &.show {
     transition-property: transform, opacity;
